--- a/public/index.html
+++ b/public/index.html
@@ -16,17 +16,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<meta name="description" content="Welcome to my personnal portfolio builded with VueJS !" />
-
-	<meta property="og:title" content="Hugo Bollon Portfolio" />
-	<meta property="og:type" content="website" />
-	<meta property="og:url" content="https://hugobollon.me/" />
-	<meta property="og:locale" content="en_US" />
-	<meta property="og:image" content="<%= BASE_URL %>og.png" />
-	<meta property="og:description" content="Welcome to my personnal portfolio builded with VueJS !" />
-
 	<link rel="icon" href="<%= BASE_URL %>favicon.ico">
 
-	<title>Hugo Bollon Portfolio</title>
+	<title>Ivonne Yang Portfolio</title>
 </head>
 
 <body style="height: 100%;">
